--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,130 +51,156 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/AppTheme">
-        <meta-data android:name="android.webkit.WebView.EnableSafeBrowsing"
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
+        <meta-data
+            android:name="android.webkit.WebView.EnableSafeBrowsing"
             android:value="false" />
+
         <activity android:name=".ViewActivity">
-            <intent-filter>
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:screenOrientation="portrait"
+            android:hardwareAccelerated="false"
+            android:launchMode="singleTask"
+            android:clearTaskOnLaunch="true"
 
         </activity>
         <activity android:name=".UpdateDeleteEvaluationListActivity">
             android:screenOrientation="portrait"
+            android:hardwareAccelerated="false"
             android:launchMode="singleTask"
             android:clearTaskOnLaunch="true"
         </activity>
         <activity android:name=".UpdateDeleteAdoptedActivity">
             android:screenOrientation="portrait"
+            android:hardwareAccelerated="false"
             android:launchMode="singleTask"
             android:clearTaskOnLaunch="true"
         </activity>
         <activity
             android:name=".ResetPasswordActivity"
             android:clearTaskOnLaunch="true"
+            android:hardwareAccelerated="false"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
             android:name=".CheckActivity"
             android:clearTaskOnLaunch="true"
+            android:hardwareAccelerated="false"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
         <activity
             android:name=".PoliticsActivity"
             android:clearTaskOnLaunch="true"
+            android:hardwareAccelerated="false"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
         <activity
             android:name=".list.ToAdoptListActivity"
             android:clearTaskOnLaunch="true"
+            android:hardwareAccelerated="false"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
         <activity
             android:name=".SplashActivity"
             android:clearTaskOnLaunch="true"
+            android:hardwareAccelerated="false"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
         <activity
             android:name=".list.MedicalEvaluationListActivity"
             android:clearTaskOnLaunch="true"
+            android:hardwareAccelerated="false"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
         <activity
             android:name=".MedicalEvaluationActivity"
             android:clearTaskOnLaunch="true"
+            android:hardwareAccelerated="false"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
         <activity
             android:name=".AdoptionFormActivity"
             android:clearTaskOnLaunch="true"
+            android:hardwareAccelerated="false"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
         <activity
             android:name=".MapsActivity"
             android:clearTaskOnLaunch="true"
+            android:hardwareAccelerated="false"
             android:label="@string/title_activity_maps"
             android:launchMode="singleTask" />
         <activity
             android:name=".ChoiceActivity"
             android:clearTaskOnLaunch="true"
+            android:hardwareAccelerated="false"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
         <activity
             android:name=".HomeActivity"
             android:clearTaskOnLaunch="true"
+            android:hardwareAccelerated="false"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
         <activity
             android:name=".list.ListActivity"
             android:clearTaskOnLaunch="true"
+            android:hardwareAccelerated="false"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
         <activity
             android:name=".list.AdoptionListActivity"
             android:clearTaskOnLaunch="true"
+            android:hardwareAccelerated="false"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
         <activity
             android:name=".RegistryActivity"
             android:clearTaskOnLaunch="true"
+            android:hardwareAccelerated="false"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity
             android:name=".AboutUsActivity"
             android:clearTaskOnLaunch="true"
+            android:hardwareAccelerated="false"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ChoiceToAdoptActivity"
             android:clearTaskOnLaunch="true"
+            android:hardwareAccelerated="false"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ChoiceMedicalActivity"
             android:clearTaskOnLaunch="true"
+            android:hardwareAccelerated="false"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
         <activity
             android:name=".list.EvaluationListActivity"
             android:clearTaskOnLaunch="true"
+            android:hardwareAccelerated="false"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
         <activity
             android:name=".list.ToAdoptedListActivity"
             android:clearTaskOnLaunch="true"
+            android:hardwareAccelerated="false"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
         <activity
             android:name=".LoginActivity"
             android:clearTaskOnLaunch="true"
+            android:hardwareAccelerated="false"
             android:launchMode="singleTask"
             android:screenOrientation="portrait"
             android:theme="@style/SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
