--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,7 +60,7 @@ dependencies {
     implementation 'com.sun.mail:android-activation:1.6.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.google.android.material:material:1.1.0-alpha09'
-
+    implementation 'com.github.ViksaaSkool:AwesomeSplash:v1.0.0'
 
 
     sonarqube {
