--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
+
     repositories {
         google()
         jcenter()
-        
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.2'
@@ -22,7 +22,9 @@ allprojects {
         jcenter()
         maven {
             url "https://plugins.gradle.org/m2/"
+
         }
+        maven { url "https://jitpack.io" }
 
     }
 }
